<resources>
    <string name="app_name">MapTest</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_marker">New Marker</string>
    <string name="gym">Gym</string>
    <string name="pokestop">PokeStop</string>
    <string name="marker_name">Marker Name</string>
    <string name="new_raid">New Raid</string>
    <string name="going">Going</string>
    <string name="there_soon">There Soon</string>
    <string name="ready">Ready</string>
    <string name="minutes_left">Minutes Left</string>
    <string name="level">Level</string>
    <string name="type">Type</string>
    <string name="interested">Interested</string>
    <string name="unsubscribed">Unsubscribed</string>
    <string name="list_view">List View</string>
    <string name="active_raids">Active Raids</string>
</resources>
